[tool.poetry]
name = "quickdraws2"
version = "1.0.0"
description = "testesttest"
authors = ["Fergus Cooper"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
h5py = "*"
joblib = "*"
numba = "*"
numpy = "<2"
pandas = "*"
pysnptools = { version = "*", extras = ["bgen"] }
scikit_learn = "*"
scipy = "*"
statsmodels = "*"
tqdm = "*"
wandb = "*"
tables = "*"
bitsandbytes = "*"
pybgen = "*"
art = "*"
rhe = "==1.0.0"
torch = { version = "2.2.1+cu118", source = "pytorch-cu118" }

[tool.poetry.dev-dependencies]
pip = ">=23"
setuptools = ">=68"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.scripts]
quickdraws-step-1 = "scripts.quickdraws_step1:main"
quickdraws-step-2 = "scripts.quickdraws_step2:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
